# text-classifier

./: README.md  pyproject.toml
.ipynb_checkpoints/: text-classifier-checkpoint.ipynb
